--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: "Vazir", sans-serif;
       /* تصویر پس‌زمینه برای کل سایت */
-      background: url("https://MahdiyehSeyfi.github.io/Chamran-Competition/pic1.jpg") no-repeat center center fixed;
+      background: url("./pic1.jpg") no-repeat center center fixed;
       background-size: cover;
       color: #222;
       text-align: center;
