--- a/index.html
+++ b/index.html
@@ -691,5 +691,78 @@
 
 </script>
 
+<canvas id="fireworksCanvas" 
+        style="position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:9999;">
+</canvas>
+
+<script>
+(function() {
+  const canvas = document.getElementById("fireworksCanvas");
+  const ctx = canvas.getContext("2d");
+  let particles = [];
+
+  function resize() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  }
+  resize();
+  window.addEventListener("resize", resize);
+
+  function random(min, max) { return Math.random() * (max - min) + min; }
+
+  function createFirework() {
+    const x = random(0, canvas.width);
+    const y = random(0, canvas.height / 2);
+    const colors = ["#ff5252", "#ffeb3b", "#69f0ae", "#40c4ff", "#e040fb"];
+
+    for (let i = 0; i < 40; i++) {
+      particles.push({
+        x, y,
+        angle: random(0, Math.PI * 2),
+        speed: random(2, 5),
+        radius: random(2, 4),
+        color: colors[Math.floor(Math.random() * colors.length)],
+        life: 60
+      });
+    }
+  }
+
+  function update() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    particles.forEach((p, index) => {
+      p.x += Math.cos(p.angle) * p.speed;
+      p.y += Math.sin(p.angle) * p.speed;
+      p.life--;
+      p.speed *= 0.95;
+
+      ctx.beginPath();
+      ctx.fillStyle = p.color;
+      ctx.globalAlpha = Math.max(p.life / 60, 0);
+      ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
+      ctx.fill();
+
+      if (p.life <= 0) particles.splice(index, 1);
+    });
+
+    requestAnimationFrame(update);
+  }
+
+  // شروع آتش‌بازی هنگام ورود
+  let fireInterval = setInterval(createFirework, 300);
+
+  // خاموش بعد از 3 ثانیه
+  setTimeout(() => {
+    clearInterval(fireInterval);
+    setTimeout(() => canvas.remove(), 1500);
+    document.body.style.overflow = "auto";
+
+  }, 3000);
+
+  update();
+})();
+</script>
+
+
 </body>
 </html>
