--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: "Vazir", sans-serif;
       /* تصویر پس‌زمینه برای کل سایت */
-      background: url("./pic10.jpg") no-repeat center center fixed;
+      background: url("./pic11.jpg") no-repeat center center fixed;
       background-size: cover;
       color: #222;
       text-align: center;
@@ -323,14 +323,15 @@
 
     /* استایل عنوان بخش نظرات بازیکنان قبل از بازی */
     .comments-title {
-      color: #ff9800;
+      /* تیترها با رنگ مشکی */
+      color: #000000;
       font-weight: bold;
       font-size: 20px;
     }
 
-    /* تغییر رنگ تیترهای سایر بخش‌ها به سفید */
+    /* تغییر رنگ تیترهای سایر بخش‌ها به مشکی */
     .tab-content h2:not(.comments-title) {
-      color: #ffffff;
+      color: #000000;
     }
 
     /* ------------------- Media Queries برای نمایش در موبایل ------------------- */
@@ -386,14 +387,16 @@
   <div id="volleyballTab" class="tab-content active">
     <!-- چهار بخش مشابه فوتسال برای والیبال: بازی‌های آینده، نظرات، نتایج، بازیکنان مؤثر -->
     <h2>📅 بازی‌های آینده</h2>
-    <div id="volleyballMatches" class="card-container"></div>
+    <!-- بازی‌های آینده والیبال به صورت جدول مدرن نمایش داده می‌شوند -->
+    <table id="volleyballMatches" class="modern-table"></table>
 
     <!-- اسلایدر نظرات بازیکنان قبل از بازی (والیبال) -->
     <h2 class="comments-title">💬  نظرات بازیکنان قبل از بازی</h2>
     <div id="volleyballCommentsSlider" class="comments-slider"></div>
 
     <h2>🏆 نتایج بازی‌ها</h2>
-    <div id="volleyballResults" class="card-container"></div>
+    <!-- نتایج والیبال در قالب جدول مدرن نمایش داده می‌شود -->
+    <table id="volleyballResults" class="modern-table"></table>
 
     <h2>🌟 بازیکنان موثر</h2>
     <div class="effective-container">
@@ -433,7 +436,7 @@
     <h2>🏆 نتایج بازی‌ها</h2>
     <div id="results" class="card-container"></div>
 
-    <h2>🌟 بازیکنان موثر</h2>
+    <h2>🏅 عناوین برتر</h2>
     <div class="effective-container">
       <table id="topScorers" class="mini-table">
         <thead><tr><th>بازیکن</th><th>تیم</th><th>گل</th></tr></thead>
@@ -450,6 +453,10 @@
         <tbody></tbody>
       </table>
     </div>
+
+    <!-- بخش نمایش قهرمان مسابقات فوتسال -->
+    <h2>🥇 قهرمان</h2>
+    <div id="champion" class="champion-container"></div>
   </div>
 
   <!-- تب ۳: تیم‌ها -->
@@ -482,10 +489,11 @@
    * در صورت فراهم بودن شیت‌های جداگانه برای والیبال، مقداردهی این متغیرها باید تغییر یابد.
    * فعلاً جهت نمونه از لینک‌های فوتسال استفاده می‌کنیم تا ساختار تب والیبال نیز داده‌ها را نمایش دهد.
    */
-  const volleyballMatchesUrl  = matchesUrl;
-  const volleyballResultsUrl  = resultsUrl;
+  const volleyballMatchesUrl  = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=119765293&single=true&output=csv";
+  const volleyballResultsUrl  = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=1389082896&single=true&output=csv";
+  // برای بخش بازیکنان مؤثر والیبال هنوز لینک جداگانه ارائه نشده است، در نتیجه از لینک مشترک استفاده می‌شود
   const volleyballEffectiveUrl = effectiveUrl;
-  const volleyballCommentsUrl = commentsUrl;
+  const volleyballCommentsUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vR3XiaUkZP2HEcyJwhjUD-fqU62hsWZdCYoZLRFYaQXefBdIj2Jq_8SjKc6Hvzr9c3bt53Qo36_iycQ/pub?gid=537934344&single=true&output=csv";
 
   /*
    * از این پس اطلاعات داورها از همان شیت بازی‌های آینده خوانده می‌شود.
@@ -548,6 +556,15 @@
       }
       buildTable("rankingTableA", groupA);
       buildTable("rankingTableB", groupB);
+      // محاسبه قهرمان: اولین تیم در داده‌ها به عنوان قهرمان انتخاب می‌شود
+      let championTeam = "";
+      if (dataRows.length > 0 && dataRows[0][0]) {
+        championTeam = dataRows[0][0].trim();
+      }
+      const champEl = document.getElementById("champion");
+      if (champEl) {
+        champEl.textContent = championTeam;
+      }
     });
 
   /* تیم‌ها - کارت‌ها با اعضای جدا */
@@ -745,25 +762,29 @@
     .then(res => res.text())
     .then(csv => {
       const rows = csv.trim().split("\n").map(r => r.split(","));
-      const container = document.getElementById("volleyballMatches");
-      if (!container) return;
+      const table = document.getElementById("volleyballMatches");
+      if (!table) return;
+      table.innerHTML = "";
+      if (!rows.length) return;
+      const header = rows[0];
+      // سطر هدر
+      const headerRow = document.createElement("tr");
+      header.forEach(cell => {
+        const th = document.createElement("th");
+        th.textContent = cell.trim();
+        headerRow.appendChild(th);
+      });
+      table.appendChild(headerRow);
+      // سطرهای داده
       for (let i = 1; i < rows.length; i++) {
         const row = rows[i];
-        const team1 = row[0] ? row[0].trim() : "";
-        const team2 = row[1] ? row[1].trim() : "";
-        const date  = row[2] ? row[2].trim() : "";
-        const time  = row[3] ? row[3].trim() : "";
-        const referee = row[4] ? row[4].trim() : "";
-        const card = document.createElement("div");
-        card.className = "card";
-        // استفاده از آیکون والیبال در جداکننده
-        card.innerHTML = `
-          <div class="teams">${team1} <span class="divider">🏐</span> ${team2}</div>
-          <div class="match-info">📅 ${date}</div>
-          <div class="match-info">⏰ ${time}</div>
-          <div class="referee-info">داور: ${referee || "-"}</div>
-        `;
-        container.appendChild(card);
+        const tr = document.createElement("tr");
+        row.forEach(cell => {
+          const td = document.createElement("td");
+          td.textContent = cell.trim();
+          tr.appendChild(td);
+        });
+        table.appendChild(tr);
       }
     });
 
@@ -772,20 +793,29 @@
     .then(res => res.text())
     .then(csv => {
       const rows = csv.trim().split("\n").map(r => r.split(","));
-      const container = document.getElementById("volleyballResults");
-      if (!container) return;
+      const table = document.getElementById("volleyballResults");
+      if (!table) return;
+      table.innerHTML = "";
+      if (!rows.length) return;
+      const header = rows[0];
+      // ایجاد سطر هدر
+      const headerRow = document.createElement("tr");
+      header.forEach(cell => {
+        const th = document.createElement("th");
+        th.textContent = cell.trim();
+        headerRow.appendChild(th);
+      });
+      table.appendChild(headerRow);
+      // ایجاد سطرهای داده
       for (let i = 1; i < rows.length; i++) {
-        const [team1, score1, score2, team2, scorers1, scorers2, cards1, cards2] = rows[i];
-        const card = document.createElement("div");
-        card.className = "card";
-        card.innerHTML = `
-          <div class="teams">${(team1 || "").trim()} ${(score1 || "").trim()} <span class="divider">🏐</span> ${(score2 || "").trim()} ${(team2 || "").trim()}</div>
-          <div class="result-info goal-scorer"><b>${(team1 || "").trim()}:</b> ${scorers1 || "-"}</div>
-          ${cards1 ? `<div class="cards">${cards1.trim()}</div>` : ""}
-          <div class="result-info goal-scorer"><b>${(team2 || "").trim()}:</b> ${scorers2 || "-"}</div>
-          ${cards2 ? `<div class="cards">${cards2.trim()}</div>` : ""}
-        `;
-        container.appendChild(card);
+        const row = rows[i];
+        const tr = document.createElement("tr");
+        row.forEach(cell => {
+          const td = document.createElement("td");
+          td.textContent = cell.trim();
+          tr.appendChild(td);
+        });
+        table.appendChild(tr);
       }
     });
 
